gitops/applications/strategies/rolling-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-service
  namespace: observastack
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 3
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: example-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: example-service
    spec:
      containers:
        - name: example-service
          image: 579871530627.dkr.ecr.us-east-1.amazonaws.com/observastack:REPLACE_WITH_IMMUTABLE_DIGEST
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /health/startup
              port: http
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
            failureThreshold: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/live
              port: http
            failureThreshold: 3
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
