gitops/applications/strategies/bluegreen-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: example-service
  namespace: observastack
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 4
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: example-service
  strategy:
    blueGreen:
      activeService: example-service
      previewService: example-service-preview
      autoPromotionEnabled: false
      scaleDownDelaySeconds: 300
      previewReplicaCount: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: example-service
    spec:
      containers:
        - name: example-service
          image: 579871530627.dkr.ecr.us-east-1.amazonaws.com/observastack:REPLACE_WITH_IMMUTABLE_DIGEST
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /health/startup
              port: http
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
            failureThreshold: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/live
              port: http
            failureThreshold: 3
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: observastack
spec:
  selector:
    app.kubernetes.io/name: example-service
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: example-service-preview
  namespace: observastack
spec:
  selector:
    app.kubernetes.io/name: example-service
  ports:
    - name: http
      port: 80
      targetPort: http
